--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dmg</groupId>
     <artifactId>Milti</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>1.0</version>
 
     <properties>
@@ -56,27 +56,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.0</version>
-            </plugin>
-
-            <plugin>
-                <groupId>com.jcabi</groupId>
-                <artifactId>jcabi-heroku-maven-plugin</artifactId>
-                <version>0.4.1</version>
-                <configuration>
-                    <name>milti</name>
-                    <artifacts>
-                        <artifact>milti:jar::${project.version}</artifact>
-                    </artifacts>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <procfile>web: java -Xmx256m -jar ./milti.jar \${PORT}</procfile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
